styled the page dynamically. still unable to get the insert and edit functions to work but the initial query to the db seems to work

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,26 +4,24 @@
 		<head>
 			<meta charset="UTF-8">
 
-			<link href="https://fonts.googleapis.com/css?family=Crafty+Girls|Fontdiner+Swanky" rel="stylesheet">
-
 			<!-- Compiled and minified Materialize CSS -->
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
 
-			<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-			<title>Burgerlicious Devour Menu</title>
+			<link rel="stylesheet" href="../assets/style.css" type="text/css"/>
+			<title>EAT - DA - BURGER</title>
 		</head>
 
 		<body>
 
-			<img src="../public/burger.png" width="400px" id="cute_burger">
+			<img src="./public/img/burger.png" width="400px">
 
 			{{{ body }}}
 
 			<footer class="burgerFooter">
 				<div class="footer-copyright">
 					<div class="container">
-						<span class="grey-text text-lighten-4">© Dan Blanco 2017 </span>
-						<a class="grey-text text-lighten-4 right" href="https://github.com/paradigm1984">Reference Work</a>	
+						<span> © Dan Blanco 2017 </span>
+						<a class="right" href="https://github.com/paradigm1984">Reference Work</a>	
 					</div>
 				</div>
 			</footer>
