--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,3 +1,4 @@
+ 
  html {
  	background-color: #FFC04C;
  }
@@ -5,11 +6,10 @@
  body {
  	width: 75%;
 	margin: 0 auto; 
-
 	display: flex;
 	min-height: 100vh;
 	flex-direction: column;
-	background-color: white;
+	background-color: yellow;
  }
 
  #burger {
@@ -29,17 +29,17 @@
  	font-weight: normal;
  	font-size: 20px;
  	text-align: center;
-
  	border-radius: 25px;
  	width: 100%;
  	margin: 10px;
  	padding: 10px;
- 	background-color: #b7ffc2;
+ 	background-color: red;
+ 	color: white;
  	border: none;
  }
 
  .burgerAvailable:hover {
- 	background-color: #81ff94;
+ 	background-color: orange;
  }
 
  .burgerEaten {
@@ -47,6 +47,7 @@
  	font-weight: normal;
  	font-size: 20px;
  	text-align: center;
+
 
  	border-radius: 25px;
  	margin: 10px;
@@ -70,17 +71,17 @@
  	font-weight: normal;
  	font-size: 20px;
  	text-align: center;
-
  	border-radius: 25px;
  	width: 100%;
  	margin: 0;
  	padding: 10px;
- 	background-color: #FFC04C;
+ 	color: white;
+ 	background-color: red;
  	border: none;
  }
 
 .addBurgerButton:active {
-	background-color: #FFC04C;
+	background-color: yellow;
 }
 
 .burgerFooter {
