--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,15 +6,17 @@
 
 			<!-- Compiled and minified Materialize CSS -->
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+			<!-- Font import -->
+			<link href="https://fonts.googleapis.com/css?family=Days+One|Mitr|Paytone+One" rel="stylesheet">
 
 			<link rel="stylesheet" href="../assets/style.css" type="text/css"/>
 			<title>EAT - DA - BURGER</title>
 		</head>
 
 		<body>
-
-			<img src="/public/img/burger.png">
-
+			<div class="container">
+				<img id="burger" src="/img/burger.png" alt ="burger image">
+			</div>
 			{{{ body }}}
 
 			<footer class="burgerFooter">
