--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,31 +1,45 @@
- 
+/*
+Fonts:
+font-family: 'Paytone One', sans-serif;
+font-family: 'Days One', sans-serif;
+font-family: 'Mitr', sans-serif;
+*/ 
  html {
  	background-color: #FFC04C;
  }
 
  body {
- 	width: 75%;
+ 	width: 90%;
 	margin: 0 auto; 
 	display: flex;
 	min-height: 100vh;
 	flex-direction: column;
+	background-image: url("/img/polkadot.png");
 	background-color: yellow;
  }
 
  #burger {
  	display: block;
     margin: auto;
+    width: 60%;
+    height: 60%;
  }
 
  h1 {
  	text-align: center;
- 	font-family: helvetica;
+ 	font-family: 'Mitr', sans-serif;
  	font-size: 65px;
  	margin: 50px;
  }
 
+ .new-burger-name {
+ 	font-family: 'Days One', sans-serif;
+ 	color: red;
+ 	text-align: center;
+ }
+
  .burgerAvailable {
- 	font-family: helvetica;
+ 	font-family: 'Days One', sans-serif;
  	font-weight: normal;
  	font-size: 20px;
  	text-align: center;
@@ -43,23 +57,32 @@
  }
 
  .burgerEaten {
- 	font-family: helvetica;
+ 	font-family: 'Days One', sans-serif;
  	font-weight: normal;
  	font-size: 20px;
  	text-align: center;
-
-
  	border-radius: 25px;
  	margin: 10px;
  	padding: 10px;
  	background-color: #ffd1c9;
+ 	display: inline-block;
+ 	width: 77%;
  }
 
  h2 {
   	text-align: center;
- 	font-family: helvetica;
+ 	font-family: 'Mitr', sans-serif;
  	font-size: 40px;
  	margin: 50px;
+ }
+
+ .delete-burger {
+ 	background-color: brown;
+ 	color: lightyellow;
+ 	border: none;
+ 	border-radius: 8px;
+ 	padding: 5px;
+ 	display: inline-block;
  }
 
  .formContainer {
@@ -67,7 +90,7 @@
  }
 
  .addBurgerButton {
- 	font-family: helvetica;
+ 	font-family: 'Mitr', sans-serif;
  	font-weight: normal;
  	font-size: 20px;
  	text-align: center;
