--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -56,7 +56,7 @@ font-family: 'Mitr', sans-serif;
  	background-color: orange;
  }
 
- .burgerEaten {
+ .burger-eaten {
  	font-family: 'Days One', sans-serif;
  	font-weight: normal;
  	font-size: 20px;
@@ -66,7 +66,7 @@ font-family: 'Mitr', sans-serif;
  	padding: 10px;
  	background-color: #ffd1c9;
  	display: inline-block;
- 	width: 77%;
+ 	width: 100%;
  }
 
  h2 {
@@ -74,15 +74,6 @@ font-family: 'Mitr', sans-serif;
  	font-family: 'Mitr', sans-serif;
  	font-size: 40px;
  	margin: 50px;
- }
-
- .delete-burger {
- 	background-color: brown;
- 	color: lightyellow;
- 	border: none;
- 	border-radius: 8px;
- 	padding: 5px;
- 	display: inline-block;
  }
 
  .formContainer {
